# dare-engine

./: .eslintignore  .eslintrc.json  .gitignore  README.md  TODO.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
deploy/: MIT License  README.md  package.json  run.bat  version.txt
design/: design copy.aseprite  design.aseprite  design.sketch  draft_1.aseprite  draft_2.aseprite  draft_3.aseprite  icon.aseprite  tileset.aseprite
design/old/: tileset.xcf
docs/: 404.html  Gemfile  _config.yml  another-page.md  components.md  index.md  properties.md
docs/_layouts/: merlot_custom.html  post.html
docs/_posts/: 2023-02-02-welcome-to-jekyll.markdown
docs/_sass/: main.scss
src/: animation.ts  assets.ts  component.ts  entity.spec.ts  entity.ts  environment.ts  fov.ts  index.ejs  index.html  info.ts  input.ts  loadyaml.ts  log.ts  main.ts  manager.ts  path.ts  properties.ts  scene.ts  schemes.ts  utils.ts
src/engine/: animation.ts  component.ts  entity.ts  environment.ts  input.ts  manager.ts  properties.ts  scheme.ts  schemes.ts  settings.ts  specs.ts  storage.ts  utils.ts
src/extensions/: htmlParser.ts  inkParser.ts  markdownParser.ts  point.ts  yamlParser.ts
src/fast/: fill.ts  find.ts  fov.ts  path.ts
src/fast/wasm/: Cargo.toml  LICENSE
src/fast/wasm/src/: lib.rs
src/game/: assets.ts
src/scenes/: game.ts  loader.ts
src/templates/: diary.hbs  info.hbs  (+1 more)
static/: drjamgo_hex_16x16.json  fantasyhextiles_v3.json  tileset.aseprite  tileset.json  tileset.xcf  version.txt
test/: entity.spec.ts
(+77 files in other folders)
