[package]
name = "wasm"
version = "0.1.0"
authors = ["rzllmr"]
description = "Wasm package of fast functions"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [ "console" ]

[build]
target-dir = "./result"
